<resources>
    <string name="app_name">Sales Buddy</string>
    <string name="tx_RegisterSale">Registrar Venda</string>
    <string name="tx_Reprocess">Reprocessar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="version">Versão</string>
    <string name="number_version">1.02.61</string>
    <string name="logout_menu">Log out</string>
    <string name="image_background_login">Imagem de fundo da tela de login</string>
    <string name="logo">Logo do app</string>
    <string name="user_label">Usuário</string>
    <string name="btn_login">LOGIN</string>
    <string name="password">Senha</string>
    <string name="menu">menu</string>
    <string name="reprocess">REPROCESSAR</string>
    <string name="register_sale">REGISTRAR VENDA</string>
    <string name="logout">LOG OUT</string>
    <string name="btn_back">Botão de voltar para a tela anterior</string>
    <string name="btn_gotoResume">IR PARA RESUMO</string>
    <string name="hint_email">E-MAIL</string>
    <string name="hint_cpf">CPF</string>
    <string name="hint_name">NOME CLIENTE</string>
    <string name="hint_value_sale">VALOR VENDA</string>
    <string name="hint_value_received">VALOR RECEBIDO</string>
    <string name="item_sale">ITEM 01</string>
    <string name="btn_add_item">Adicionar novo item</string>
    <string name="sale_summary">RESUMO VENDA</string>
    <string name="reprocess_title">REPROCESSAMENTO</string>
    <string name="change">ALTERAR</string>
    <string name="finish">FINALIZAR</string>
    <string name="name">Nome</string>
    <string name="cpf">CPF</string>
    <string name="email">E-mail</string>
    <string name="item">Itm</string>
    <string name="description">Descrição</string>
    <string name="value_received">Valor recebido</string>
    <string name="sale_value">Valor venda</string>
    <string name="change_due">Troco devido</string>
    <string name="sale_receipt">COMPROVANTE</string>
    <string name="confirm_receipt">ENVIAR COMPROVANTE PARA CLIENTE?</string>
    <string name="yes">SIM</string>
    <string name="no">NÃO</string>
    <string name="btn_remove_item">Remover item</string>
    <string name="action_sale_receipt">ENVIAR COMPROVANTE PARA CLIENTE?</string>
    <string name="number_sale">Venda n° 000000</string>
    <string name="exemmple_name_client">Nome José Maria das Neves</string>
    <string name="exemple_cpf">000.000.000.00</string>
    <string name="example_email">josemariadasneves@gmail.com</string>
    <string name="example_Money">R$00,00</string>
    <string name="example_id">Id</string>
    <string name="example_desc">Descrição</string>
    <string name="message_dialog1">COMPROVANTE ENVIADO</string>
    <string name="message_dialog2">COM SUCESSO PARA O E-MAIL:</string>
    <string name="message_dialog_reprocess_correct1">REPROCESSAMENTO</string>
    <string name="message_dialog_reprocess_correct2">EFETUADO COM SUCESSO</string>
    <string name="message_dialog_reprocess_wrong1">PROBLEMAS ENCONTRADOS</string>
    <string name="message_dialog_reprocess_wrong2">AO REPROCESSAR ALGUMAS</string>
    <string name="message_dialog_reprocess_wrong3">VENDAS, TENTE NOVAMENTE</string>
    <string name="example_value_sale_reprocess">R$ 543,98</string>
    <string name="example_name_client_reprocess">Marcos Silva</string>
</resources>