<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#D9FFFFFF">

    <LinearLayout
        android:layout_width="416dp"
        android:layout_height="280dp"
        android:orientation="vertical"
        android:paddingStart="42dp"
        android:paddingEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textAlignment="viewEnd"
            app:drawableRightCompat="@drawable/ic_close_menu" />


        <TextView
            android:id="@+id/rout_register_sale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="35dp"
            android:fontFamily="@font/montserrat_bold"
            android:padding="5dp"
            android:text="@string/register_sale"
            android:textColor="@color/blue_app"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/rout_reprocess"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="35dp"
            android:fontFamily="@font/montserrat_bold"
            android:padding="5dp"
            android:text="@string/reprocess"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/blue_app"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/rout_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="35dp"
            android:fontFamily="@font/montserrat_bold"
            android:padding="5dp"
            android:text="@string/logout"
            android:textColor="@color/blue_app"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
